# OpenGLScene

./: .gitignore  CMakeLists.txt  frameBuffer.txt  vcpkg.json
data/mesh/: Musa_highpoly.mtl  Musa_highpoly_full.mtl  Test.mtl  godzilla.mtl  godzilla_test.mtl  scene.mtl  star_destroyer.mtl  starwars_scene.mtl
data/mesh_test/: Campfire.mtl  Dragon.mtl  Forrest.mtl  Ground.mtl  Viking - Copie.mtl  Winter_Girl.mtl  damagedWall.mtl  egg.mtl  fireElemental.mtl  fireSphere.mtl  flyingCreature.mtl  glowingCrystal.mtl  grass.mtl  handStatue.mtl  portal.mtl  werewolf.mtl  window.mtl
data/mesh_test/House/: house.mtl
data/mesh_test/RedTree/: RedTree.mtl
data/mesh_test/Rocks/: rock.mtl
data/mesh_test/Shrine/: Shrine.mtl
data/mesh_test/StoneHedge/: StoneHedge.mtl
data/mesh_test/Tree/: Tree.mtl  bigTree.mtl
data/shaders/: meshShader.frag  normalShader.frag  normalShader.vert  simpleShadow.frag  simpleShadow.vert  skyBoxShader.vert
data/shaders/hello_HDR/: HDRShader.frag
data/shaders/hello_instancing/: instancingShader.frag  instancingShader.vert
include/: assimpModel.h  camera.h  cubeMap.h  engine.h  error.h  frameBuffer.h  lights.h  material.h  meshAssimp.h  meshe.h  modelAssimp.h  quad.h  sceneObject.h  shader.h  texture.h
include/programs/: Demo_scene.h
main/: DemoScene.cpp  Demo_scene.cpp  hello_pointLight_shadow.cpp  hello_shadow_map.cpp  hello_shadows_map.cpp
src/: assimpModel.cpp  camera.cpp  cubeMap.cpp  engine.cpp  error.cpp  frameBuffer.cpp  meshAssimp.cpp  meshe.cpp  modelAssimp.cpp  modele.cpp  shader.cpp  texture.cpp
(+16 files in other folders)
